--- a/app/edge/components/edge-job-form/edgeJobForm.html
+++ b/app/edge/components/edge-job-form/edgeJobForm.html
@@ -1,4 +1,5 @@
 <form class="form-horizontal" name="edgeJobForm">
+  <div class="col-sm-12 form-section-title"> Edge job configuration </div>
   <!-- name-input -->
   <div class="form-group mt-4">
     <label for="edgejob_name" class="col-sm-1 control-label text-left required">Name </label>
