--- a/app/portainer/components/group-association-table/groupAssociationTable.html
+++ b/app/portainer/components/group-association-table/groupAssociationTable.html
@@ -1,7 +1,7 @@
 <div class="datatable">
   <table class="table table-hover" data-cy="{{ $ctrl.cyValue }}">
-    <div class="col-sm-12">
-      <span><pr-icon icon="'search'" feather="true" class-name="'searchIcon'"></pr-icon></span>
+    <div class="col-sm-12 vertical-center">
+      <pr-icon icon="'search'" feather="true" class-name="'searchIcon'"></pr-icon>
       <input
         type="text"
         class="searchInput"
