--- a/app/portainer/components/forms/git-form/git-form-auth-fieldset/git-form-auth-fieldset.html
+++ b/app/portainer/components/forms/git-form/git-form-auth-fieldset/git-form-auth-fieldset.html
@@ -3,9 +3,11 @@
     <por-switch-field
       checked="$ctrl.model.RepositoryAuthentication"
       label="'Authentication'"
+      label-class="'col-sm-3 col-lg-2'"
       name="'authSwitch'"
       on-change="($ctrl.onChangeAuth)"
       data-cy="'component-gitAuthToggle'"
+      switch-values="{on:'Yes',off:'No'}"
     ></por-switch-field>
   </div>
 </div>
